--- a/TODO.org
+++ b/TODO.org
@@ -5,6 +5,16 @@
     (write-json '((message . "Harro") (route . "customer")))
     
   #+END_SRC
+
+  #+BEGIN_SRC scheme
+    (use http-client
+         medea)
+    
+    (with-input-from-request
+     "http://staging.crunchr.co/api/texthacker/user?phone=4152053084"
+     #f
+     read-json)
+  #+END_SRC
 * TODO Airline example
   Need a composite key: user and project; need a mapping from projects
   to roots to start the users.
